chore: sync v11 branch with latest from main (#2709)
* status indicator pattern

* Update index.mdx

Full copy edit and revision.

* copy edits, finalizing names for indicators

* chore: temporarily remove status indicator from sidenav

* docs(support-02): update support-02 value (#2288)

* add button variants to live modal preivew (#2299)

* docs(Modal): update modal live preview

* docs(Modal): add solo button example to code docs

* docs(Modal): update action handler

Co-authored-by: Josefina Mancilla <32556167+jnm2377@users.noreply.github.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Andrea N. Cardona <andreancardona@gmail.com>

* chore(gatsby): remove v3.0 FAST_REFRESH flag (#2336)

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

* comms: All about Carbon additions, edits, deletions (#2338)

* comms: all about carbon additions

* update to the team page

* copyediting pass

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Update src/pages/all-about-carbon/who-uses-carbon.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* Delete why-use-carbon copy.mdx

Co-authored-by: emyarod <emyarod@users.noreply.github.com>

* copy edits to who uses carbon (#2347)

* fix: update Carbon for IBM.com community index links (#2343)

Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

* Removed space between paragraphs (#2351)

Removed space between paragraphs in “Overview” and “Carbon is open source” so the copy reads continuously without paragraph breaks. Not needed and

--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -40,12 +40,30 @@ libraries.
 
 #### 2. Turn on the theme libraries
 
-Inside of a design file, navigate to the **Asset** panel on the left and click
-on the **Team library** icon in the upper right of the panel. Find the team
-called `[NEW] IBM Design Systems` and switch the toggle beside
-`White theme - Carbon Design System` to on.
+Inside of a design file, navigate to the **Main menu** panel in the top left of
+the toolbar (A). Open the menu and select **Libraries** from the list (B).
 
-To view the actual library, visit this
+<Row>
+<Column colLg={8}>
+
+![figma instructions part 1](images/kit-figma-1.png)
+
+</Column>
+</Row>
+
+Then in the Libraries modal that appears, find the team called
+`[NEW] IBM Design Systems` (C) and switch the toggle beside
+`White theme - Carbon Design System` to on (D).
+
+<Row>
+<Column colLg={8}>
+
+![figma instructions part 2](images/kit-figma-2.png)
+
+</Column>
+</Row>
+
+To preview the library, visit this
 [view-only link](https://www.figma.com/file/Vzz8k68Pqk5HfaTdQOQrGu/White-Theme---Carbon-Design-System?node-id=456%3A14680).
 
 #### 3. Turn on the other IBM Design Language libraries 
