--- a/src/pages/whats-happening/v11-release/index.mdx
+++ b/src/pages/whats-happening/v11-release/index.mdx
@@ -13,8 +13,10 @@ developers, and with no brand updates, no product redesigns are required.
 </PageDescription>
 
 <InlineNotification>
-  To learn more about the v11 Beta Release head over to the{' '}
-  <a href="/migrating/guide/overview/">Migration guide overview</a> page.
+
+**Note:** The Carbon v11 release is currently an alpha release. Be on the
+lookout for the public preview release available in the coming months.
+
 </InlineNotification>
 
 <AnchorLinks>
@@ -58,6 +60,30 @@ brand-driven product redesigns.
 <Row>
 <Column colLg={4} colMd={4} noGutterMdLeft>
 <ArticleCard
+    title="Carbon v11 Beta 3"
+    author="Josh Black"
+    date="December 10th, 2021"
+    href="https://medium.com/carbondesign/carbon-v11-beta-3-9b6be61bb2af"
+    >
+
+![Carbon v11 Beta 3](images/carbon_2021-beta-3.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
+    title="Carbon v11 Beta 2"
+    author="Josh Black"
+    date="September 23, 2021"
+    href="https://medium.com/carbondesign/carbon-v11-beta-2-7d0aa4e732d1"
+    >
+
+![Carbon v11 Beta 2](images/carbon_2021-beta-2.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+<ArticleCard
     title="Carbon v11 Beta 1"
     author="Josh Black"
     date="August 6, 2021"
@@ -65,30 +91,6 @@ brand-driven product redesigns.
     >
 
 ![Carbon v11 Beta 1](images/carbon_2021-beta-1.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    title="Carbon’s 2021 release: April update"
-    author="Josh Black"
-    date="April 22, 2021"
-    href="https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea"
-    >
-
-![Carbon’s 2021 release: April update](images/carbon_2021-april-update.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    title="What’s coming to Carbon in 2021"
-    author="Josh Black"
-    date="November 12, 2020"
-    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
-    >
-
-![Carbon 2021 release](images/carbon_2021.png)
 
 </ArticleCard>
 </Column>
@@ -217,8 +219,9 @@ feedback.
 
 - A lot of the changes made will be name-based.
 
-As part of IBM's front-end developer educational series, FEDucation, Josh Black
-introduces the upcoming v11 release, its features, and how to get involved and
-provide feedback.
+- Some changes with components will require updating to the new component API.
 
-<Video title="Carbon v11 video" vimeoId="567122059" />
+- Teams will need to update their Sass dependency since `node-sass` has been
+  deprecated. They will also need to update how they bring in Carbon. For
+  details about what can be done now, see our
+  [April update Medium article](https://medium.com/carbondesign/carbons-2021-release-april-update-9d23242b3dea).
