Added links to related components

--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -18,7 +18,6 @@ element and can contain interactive elements.
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>Live demo</AnchorLink>
 <AnchorLink>Formatting</AnchorLink>
 <AnchorLink>Content</AnchorLink>
 <AnchorLink>Behaviors</AnchorLink>
@@ -92,8 +91,6 @@ complete a workflow. Use the
 [modal component](https://carbondesignsystem.com/components/modal/usage/)
 instead.
 
-## Live demo
-
 ## Formatting
 
 ### Anatomy
@@ -153,7 +150,7 @@ and tab tip types.
 ### Main elements
 
 Heading, body, and footer content can vary based on your use case. To see
-examples of content used within toggletips, visit the disclosure pattern.
+examples of content used within toggletips, visit the [disclosure pattern](/patterns/disclosures-pattern/).
 
 Interactive tooltips may contain rich text and other interactive elements like
 buttons or links and must remain actively open until a user dismisses the
@@ -219,13 +216,13 @@ trigger element has focus.
 
 #### Popover
 
-Popovers are used as a base layer in some of our components like tooltips,
+[Popovers](/components/popover/usage/) are used as a base layer in some of our components like tooltips,
 overflow menus, and dropdown menus. For further guidance, see Carbon’s popover
 component.
 
 #### Disclosure
 
-Disclosures use popovers as a base layer. Disclosures are comprised of a popover
+[Disclosures](/patterns/disclosures-pattern/) use popovers as a base layer. Disclosures are comprised of a popover
 container, text, and interactive elements. Interactive elements are kept in the
 tab order of the page. Further guidance on the disclosure pattern coming soon.
 
