update progress bar

--- a/src/pages/components/progress-bar/style.mdx
+++ b/src/pages/components/progress-bar/style.mdx
@@ -10,14 +10,14 @@ tabs: ['Usage', 'Style']
 
 | Element       | Property   | Color token           |
 | ------------- | ---------- | --------------------- |
-| Label         | Text color | `$text-primary`       |
-| Helper text   | Text color | `$text-helper`        |
+| Label         | text color | `$text-primary`       |
+| Helper text   | text color | `$text-helper`        |
 | Track         | Background | `$border-subtle`      |
-| Bar: active   | Background | `$border-interactive` |
-| Bar: success  | Background | `$support-success`    |
-| Icon: success | Fill       | `$support-success`    |
-| Bar: error    | Background | `$support-error`      |
-| Icon: error   | Fill       | `$support-error`      |
+| Bar: active   | background | `$border-interactive` |
+| Bar: success  | background | `$support-success`    |
+| Icon: success | fill       | `$support-success`    |
+| Bar: error    | background | `$support-error`      |
+| Icon: error   | fill       | `$support-error`      |
 
 <Row>
 <Column colLg={8}>
@@ -51,14 +51,10 @@ tabs: ['Usage', 'Style']
 
 ## Typography
 
-The width and height of a popover container can vary depending on the amount of
-content within it. We recommend to not exceed a popover width size of four
-columns.
-
-| Element     | Font-size (px/rem) | Font-weight | Type token        |
-| ----------- | ------------------ | ----------- | ----------------- |
-| Label       | 14px / 0.875rem    | Regular/400 | `$label-01`       |
-| Helper text | 12px / 0.75rem     | Regular/400 | `$helper-text-01` |
+| Element     | Font-size (px/rem) | Font-weight   | Type token        |
+| ----------- | ------------------ | ------------- | ----------------- |
+| Label       | 14px / 0.875rem    | Regular / 400 | `$label-01`       |
+| Helper text | 12px / 0.75rem     | Regular / 400 | `$helper-text-01` |
 
 ## Structure
 
@@ -70,9 +66,9 @@ to a maximum of six columns when possible.
 
 | Element              | Property       | px / rem | Spacing token |
 | -------------------- | -------------- | -------- | ------------- |
-| Label (top aligned)  | Padding-bottom | 8/.5     | `$spacing-03` |
-| Helper text          | Padding-top    | 8/0.5    | `$spacing-03` |
-| Label (left aligned) | Padding-right  | 16/1     | `$spacing-05` |
+| Label (top aligned)  | Padding-bottom | 8 / 0.5  | `$spacing-03` |
+| Helper text          | Padding-top    | 8 / 0.5  | `$spacing-03` |
+| Label (left aligned) | Padding-right  | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
