--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -85,25 +85,22 @@ which a bar is moving along in constant speed, repeating over time.
 | [Indeterminate](Indeterminate) | Use indeterminate progress bars for an unspecified completion of time or unclear information about the progression — they convey that users’ request, action, or data is being processed at the moment without indicating how long the activity will take. |
 
 <Row>
-<Column colLg={4}>
+<Column colLg='4'>
 
 ![Determinate progress bars fill from 0 to 100%.](images/progress-bar-usage-2.gif)
 
-<Caption>Determinate progress bars fill from 0 to 100%.</Caption>
-
+<Caption>
+  Determinate progress bars fill from 0 to 100%.
+</Caption>
 </Column>
 
-<Column colLg={4}>
-<GifPlayer>
+<Column colLg='4'>
 
 ![Indeterminate progress bars move along a fixed track continually until the process is complete.](images/progress-bar-usage-3.gif)
 
 <Caption>
-  Indeterminate progress bars move along a fixed track continually until the
-  process is complete.
+  Indeterminate progress bars move along a fixed track continually until the process is complete.
 </Caption>
-
-</GifPlayer>
 </Column>
 </Row>
 
@@ -118,10 +115,12 @@ Use a determinate progress bar when progress can be calculated against a
 specific goal. For example, when downloading a file of a known size.
 
 <Row>
-<Column colLg={8}>
+<Column colLg='8'>
+<GifPlayer color='dark'>
 
-![Progress bar uploading](images/progress-bar-usage-4.gif)
+![Determinate progress bar](/images/progress-bar-usage-4.gif)
 
+</GifPlayer>
 </Column>
 </Row>
 
@@ -138,10 +137,12 @@ determinate stage of the load is used to visually indicate the completion of the
 task to the user. In this scenario, a percentage indicator would not be present.
 
 <Row>
-<Column colLg={8}>
+<Column colLg='8'>
+<GifPlayer>
 
-![Progress bar uploading](images/progress-bar-usage-5.gif)
+![Indeterminate progress bar](/images/progress-bar-usage-5.gif)
 
+</GifPlayer>
 </Column>
 </Row>
 
@@ -180,7 +181,7 @@ progress bar.
 ## Formatting
 
 Determinate and indeterminate progress bars both have a label and an optional
-helper text. However, the inderterminate can’t provide the exact, quantiative
+helper text. However, the indeterminate can’t provide the exact, quantiative
 information about the progression in the optional helper text.
 
 ### Anatomy
@@ -212,7 +213,7 @@ information about the progression in the optional helper text.
 The progress bar is offered in two different sizes—default (8px) and small
 (4px). The default progress bar height is typically used when there is large
 amounts of space on a page. The small progress bar height is commonly used when
-space is restricted and can be placed within cards, data table, or side panels.
+space is restricted and can be placed within cards, data tables, or side panels.
 
 <Row>
 <Column colLg={8}>
@@ -255,7 +256,7 @@ judgement that fits the context.
 
 ![Progress bar alignments](images/progress-bar-usage-10.png)
 
-<Caption>A few common examples of text alignmnet for progress bars</Caption>
+<Caption>A few common examples of text alignment for progress bars</Caption>
 
 </Column>
 </Row>
@@ -263,7 +264,7 @@ judgement that fits the context.
 #### Text placement
 
 Labels or helper text should always be placed above, below, or beside the
-progress bar for readibility. Avoid placing text inside or centering text with
+progress bar for readability. Avoid placing text inside or centering text with
 the progress bar. This visual could cause clutter and inconsistency in text
 alignment. Meanwhile, placing the text far away from the progress bar could
 cause confusion in the context.
@@ -276,7 +277,7 @@ cause confusion in the context.
   </DoDont>
   <DoDont type="dont" caption="Don’t embed text into the progress bar.">
 
-![Don’t embed text into the progres bar](images/progress-bar-usage-13.png)
+![Don’t embed text into the progress bar](images/progress-bar-usage-13.png)
 
   </DoDont>
 </DoDontRow>
@@ -302,9 +303,9 @@ value is left-aligned, and the fill progresses from right to left. Keep in mind
 that the placement of the percent sign differs depending on the locale.
 
 <Row>
-<Column colLg={6}>
+<Column colLg='8'>
 
-![Progress bar RTL](images/progress-bar-usage-11.gif)
+<GifPlayer>![Progress bar RTL](/images/progress-bar-usage-11.gif)</GifPlayer>
 
 </Column>
 </Row>
@@ -323,7 +324,7 @@ that the placement of the percent sign differs depending on the locale.
 
 - Helper text is used to show additional information about the process taking
   place.
-- Common usecases of helper text for a progress bar can either be a generic
+- Common use cases of helper text for a progress bar can either be a generic
   phrase, for example “Fetching assets…”, or it can indicate an exact amount of
   something to be completed, for example "42/256 items".
 - When indicating a loading percentage, the percentage number should count up as
@@ -368,9 +369,12 @@ should appear. As soon as a process fails, the current visual progress remains
 visible but the indicator bar's progress stops in place and spans full width.
 
 <Row>
-<Column colLg={8}>
+<Column colLg='8'>
+<GifPlayer color='dark'>
 
 ![The example shows the progress bar with error remains persistent as confirmation inside the image tile](images/progress-bar-usage-17.gif)
+
+</GifPlayer>
 
 <Caption>
   The example shows the progress bar with error remains persistent as
@@ -381,9 +385,12 @@ visible but the indicator bar's progress stops in place and spans full width.
 </Row>
 
 <Row>
-<Column colLg={8}>
+<Column colLg='8'>
+<GifPlayer color='dark'>
 
 ![The example shows thep progress bar is automatically dismissed once it’s done uploading](images/progress-bar-usage-18.gif)
+
+</GifPlayer>
 
 <Caption>
   The example shows thep progress bar is automatically dismissed once it’s done
@@ -436,10 +443,12 @@ An indeterminate bar can change to a determinate indicator (finishing from left
 to right) when enough information is gathered to end the load animation.
 
 <Row>
-<Column colLg={8}>
+<Column colLg='8' >
+<GifPlayer color='dark'>
 
-![An indeterminate bar can change to a determinate indicator](images/progress-bar-usage-21.gif)
+![An indeterminate bar can change to a determinate indicator](/images/progress-bar-usage-21.gif)
 
+</GifPlayer>
 </Column>
 </Row>
 
