--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -3,7 +3,7 @@ title: Toggletip
 description:
   Toggletips use the disclosure pattern to toggle the visibility of a popover.
   They display additional, hidden information upon the click of a UI trigger
-  element.
+  element and can contain interactive elements.
 tabs: ['Usage', 'Style']
 ---
 
@@ -11,19 +11,16 @@ tabs: ['Usage', 'Style']
 
 Toggletips use the disclosure pattern to toggle the visibility of a popover.
 They display additional, hidden information upon the click of a UI trigger
-element.
+element and can contain interactive elements.
 
 </PageDescription>
 
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>Live demo</AnchorLink>
 <AnchorLink>Formatting</AnchorLink>
 <AnchorLink>Content</AnchorLink>
-<AnchorLink>Universal behaviors</AnchorLink>
-<AnchorLink>Definition toggletip</AnchorLink>
-<AnchorLink>Interactive toggletip</AnchorLink>
+<AnchorLink>Behaviors</AnchorLink>
 <AnchorLink>Related</AnchorLink>
 <AnchorLink>References</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
@@ -33,14 +30,14 @@ element.
 ## Overview
 
 Toggletips reveal supplemental content when a user clicks a button or another UI
-element and remains actively open until a user dismiss it. A toggletip is
+element and remains actively open until a user dismisses it. A toggletip is
 comprised of a UI trigger and the
 [popover component](http://carbondesignsystem.com/components/popover/usage/).
 Use the disclosure pattern to design supplemental content within the component.
 Toggletips can include a wide variety of information and interactive elements as
 long
 as[accessibility requirements](https://www.ibm.com/able/requirements/requirements/)
-are maintained including focus order and ensure all functionality is operable
+are maintained including focus order and ensuring all functionality is operable
 through a keyboard interface.
 
 <Row>
@@ -67,11 +64,15 @@ interactive trigger element. The two components differ in the way they are
 invoked and dismissed and if the user must interact with the contents. A tooltip
 is exposed on `Hover` or `Focus` when you need to expose brief, supplemental
 information that is not interactive. A toggletip is used on `Click` and `Enter`
-when you need to expose information that a user needs to interact with.
+when you need to expose interactive elements, such as button, that a user needs
+to interact with.
+
+The exception here is that definition tooltip can be invoked on either `Hover`
+or `Click` depending on use case.
 
 ### When to use
 
-- Use when defining a term or inline item
+- Use when an interactive element must be placed within the popover
 - Use for quick, in context editing
 - Use for filter panels that overlay content
 
@@ -90,26 +91,6 @@ complete a workflow. Use the
 [modal component](https://carbondesignsystem.com/components/modal/usage/)
 instead.
 
-### Variants
-
-Toggletips can be used in many different ways and are not limited to the
-variants listed below.
-
-| Variant                                         | Purpose                                                                                                                                                          |
-| ----------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Definition toggletip](#definition-toggletip)   | The definition toggletip provides additional help or defines an item or term. It may be used on the label of a UI element, or on a word embedded in a paragraph. |
-| [Interactive toggletip](#interactive-toggletip) | Interactive toggletip allows for interactive elements within the toggletip such as checkboxes, radio buttons, buttons, and links.                                |
-
-<Row>
-<Column colLg={8}>
-
-![Example of defintion toggletip and interactive toggletip](images/toggle-tip-usage-3.png)
-
-</Column>
-</Row>
-
-## Live demo
-
 ## Formatting
 
 ### Anatomy
@@ -122,11 +103,11 @@ variants listed below.
 </Column>
 </Row>
 
-1. **UI trigger button:** Usually a button but as long as trigger is
+1. **UI trigger button:** Usually a button but as long as the trigger is
    interactive, it can visually change its shape and size depending on the use
    case.
 2. **Tip:** An indicator that is added to a popover container to help show the
-   relationship between the popover and where it was triggered from. Can utilize
+   relationship between the popover and where it was triggered from. Toggletips can utilize
    no tip, caret tip, or tab tip types.
 3. **Content area:** Varies based on use case and follows disclosure guidelines.
 4. **Popover container:** Area that contains text and interactive elements.
@@ -160,23 +141,6 @@ UI trigger.
 </Column>
 </Row>
 
-For toggletips that are inline with other text, like a definition toggletip, do
-not obstruct words to the left and right of the trigger word. When the toggletip
-is active, ensure popover overlays other content and is not cut off by other
-surrounding components or bleeds off the page where some content is not visible.
-
-<Row>
-<Column colLg={8}>
-
-![Toggletip placement](images/toggle-tip-usage-7.png)
-
-</Column>
-</Row>
-
-<Caption>
-  Definition toggletips should display above or below interactive element
-</Caption>
-
 Placement of a popover in relation to the trigger depends on the type of popover
 used. Visit the popover component for specific guidelines for no tip, caret tip,
 and tab tip types.
@@ -186,7 +150,12 @@ and tab tip types.
 ### Main elements
 
 Heading, body, and footer content can vary based on your use case. To see
-examples of content used within toggletips, visit the disclosure pattern.
+examples of content used within toggletips, visit the [disclosure pattern](/patterns/disclosures-pattern/).
+
+Interactive tooltips may contain rich text and other interactive elements like
+buttons or links and must remain actively open until a user dismisses the
+toggletip. Maintain accessibility requirements including focus order and ensure
+all functionality is operable through a keyboard interface.
 
 ### Overflow content
 
@@ -211,7 +180,7 @@ scroll horizontally or let content bleed off the page.
 For further content guidance, see Carbon's
 [content guidelines](<[https://www.carbondesignsystem.com/guidelines/content/general](https://www.carbondesignsystem.com/guidelines/content/general)>).
 
-## Universal behaviors
+## Behaviors
 
 ### States
 
@@ -223,8 +192,8 @@ toggletip is hidden and inactive. Toggletips are displayed on `Click` and
 
 #### Mouse
 
-Toggletips are triggered when a user clicks the interactive trigger and is
-dismissed by clicking anywhere outside the toggletip's active popover.
+Toggletips are triggered on `Click` and is dismissed by clicking anywhere
+outside the toggletip's active popover or UI trigger.
 
 #### Keyboard
 
@@ -243,64 +212,17 @@ trigger element has focus.
 NVDA: Users can trigger a toggletip by pressing `Enter` or `Space` while the
 trigger element has focus.
 
-## Definition toggletip
-
-The definition toggletip provides inline additional help or defines a term. It
-may be used on the label of a UI element, on a word embedded in a paragraph, or
-in compact spaces such as data tables where icons clutter the UI. You can use
-definition tooltips on headers, body copy, or labels.
-
-### Best practices
-
-- Should contain brief, read-only text
-- Use on proper nouns, technical terms, or acronyms with two letters or more
-- Do not use a definition tooltip on words with fewer than two letters
-
-<Row>
-<Column colLg={8}>
-
-![Definition toggletip example](images/toggle-tip-usage-9.png)
-
-</Column>
-</Row>
-
-<Caption>Example of a defintion toggletip</Caption>
-
-## Interactive toggletip
-
-Interactive tooltips may contain rich text and other interactive elements like
-buttons or links and must remain actively open until a user dismisses the
-toggletip.
-
-### Best practices
-
-- Maintain
-  [accessibility requirements](https://www.ibm.com/able/requirements/requirements/)
-  including focus order and ensure all functionality is operable through a
-  keyboard interface.
-- Follow disclosure patterns when designing content within a toggletip
-
-<Row>
-<Column colLg={8}>
-
-![Definition toggletip example](images/toggle-tip-usage-10.png)
-
-</Column>
-</Row>
-
-<Caption>Example of an interactive toggletip</Caption>
-
 ## Related
 
 #### Popover
 
-Popovers are used as a base layer in some of our components like tooltips,
+[Popovers](/components/popover/usage/) are used as a base layer in some of our components like tooltips,
 overflow menus, and dropdown menus. For further guidance, see Carbon’s popover
 component.
 
 #### Disclosure
 
-Disclosures use popovers as a base layer. Disclosures are comprised of a popover
+[Disclosures](/patterns/disclosures-pattern/) use popovers as a base layer. Disclosures are comprised of a popover
 container, text, and interactive elements. Interactive elements are kept in the
 tab order of the page. Further guidance on the disclosure pattern coming soon.
 
