copy and image update
• updated  style image
• updated break after interactive states heading
• updated capitalization
• updated toggletip to tooltip

--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -64,9 +64,9 @@ button styles for specific hover and focus states.
   button tooltip
 </Caption>
 
-### Definition toggletip
+### Definition tooltip
 
-| element   | property         | color token           |
+| Element   | Property         | Color token           |
 | --------- | ---------------- | --------------------- |
 | Label     | text color       | `$text-secondary`     |
 | Trigger   | border           | `$border-strong`      |
@@ -74,6 +74,8 @@ button styles for specific hover and focus states.
 | Text      | color            | `$text-inverse`       |
 
 #### Interactive states
+
+<br />
 
 | State  | Element          | Property | Color token           |
 | ------ | ---------------- | -------- | --------------------- |
