--- a/src/pages/components/tooltip/style.mdx
+++ b/src/pages/components/tooltip/style.mdx
@@ -11,13 +11,22 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ### Standard tooltip
 
-| Element               | Property         | Color token           |
-| --------------------- | ---------------- | --------------------- |
-| Label                 | text color       | `$text-secondary`     |
-| Trigger button        | svg              | `$icon-secondary`     |
-| Trigger button: hover | svg              | `$icon-primary`       |
-| Container             | background-color | `$background-inverse` |
-| Text                  | color            | `$text-inverse`       |
+| Element        | Property         | Color token           |
+| -------------- | ---------------- | --------------------- |
+| Label          | text color       | `$text-secondary`     |
+| Trigger button | svg              | `$icon-secondary`     |
+| Container      | background-color | `$background-inverse` |
+| Text           | color            | `$text-inverse`       |
+
+#### Interactive states
+
+<br />
+
+| State  | Element | Property | Color token     |
+| ------ | ------- | -------- | --------------- |
+| Hover  | trigger | svg      | `$icon-primary` |
+| Active | trigger | svg      | `$icon-primary` |
+| Focus  | trigger | border   | `$focus`        |
 
 <Row>
 <Column colLg={8}>
@@ -39,6 +48,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 | Container | background-color | `$background-inverse` |
 | Text      | color            | `$text-inverse`       |
 
+#### Interactive states
+
+Icon button tooltip states rely on what kind of button is being used. Refer to
+button styles for specific hover and focus states.
+
 <Row>
 <Column colLg={8}>
 
@@ -50,6 +64,38 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 <Caption>
   Example of closed (top), hover (middle), and focus (bottom) states for an icon
   button tooltip
+</Caption>
+
+### Definition tooltip
+
+| Element   | Property         | Color token           |
+| --------- | ---------------- | --------------------- |
+| Label     | text color       | `$text-secondary`     |
+| Trigger   | border           | `$border-strong`      |
+| Container | background-color | `$background-inverse` |
+| Text      | color            | `$text-inverse`       |
+
+#### Interactive states
+
+<br />
+
+| State  | Element          | Property | Color token           |
+| ------ | ---------------- | -------- | --------------------- |
+| Hover  | trigger          | border   | `$border-interactive` |
+| Active | trigger          | border   | `$border-interactive` |
+| Focus  | label and border | border   | `$focus`              |
+
+<Row>
+<Column colLg={8}>
+
+![States for definition tooltip](images/tooltip-style-3.png)
+
+</Column>
+</Row>
+
+<Caption>
+  Example of closed (top-left), hover (top-right), active (bottom-left) and
+  focus (bottom-right) states for definition button tooltip
 </Caption>
 
 ## Typography
@@ -78,7 +124,7 @@ contain.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for a standard tooltip](images/tooltip-style-3.png)
+![Structure and spacing measurements for a standard tooltip](images/tooltip-style-4.png)
 
 </div>
 
@@ -97,7 +143,7 @@ contain.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for an icon button tooltip](images/tooltip-style-4.png)
+![Structure and spacing measurements for an icon button tooltip](images/tooltip-style-5.png)
 
 </div>
 
@@ -105,19 +151,39 @@ contain.
   Structure and spacing measurements for an icon button tooltip | px / rem
 </Caption>
 
+### Definition tooltip
+
+| Element   | Property                    | px / rem | Spacing token |
+| --------- | --------------------------- | -------- | ------------- |
+| Container | max-width                   | 176 / 11 | —             |
+|           | padding-top, padding-bottom | 8 / .5   | `$spacing-04` |
+|           | padding-left, padding-right | 8 / .5   | `$spacing-04` |
+|           | margin-top                  | 4 / 0.25 | `$spacing-02` |
+| Trigger   | border-bottom               | 1 px     | —             |
+
+<div className="image--fixed">
+
+![Structure and spacing measurements for definition tooltip](images/tooltip-style-6.png)
+
+</div>
+
+<Caption>
+  Structure and spacing measurements for definition tooltip | px / rem
+</Caption>
+
 ### Placement
 
 Tooltip directions by default are set to auto. Upon opening, tooltips can detect
 the edges of the browser to properly be placed in view so the container does not
 get cutoff. Tooltips can instead use specific directions and may be
-positioned top, right, bottom, or left to the trigger item. Tooltips should be
-placed at least 16px / 1rem off of the bottom of the page and not bleed off page
-or behind other content. On mobile, tooltips can only appear below the tooltip
-icon.
+positioned **top**, **right**, **bottom**, or **left** to the trigger item.
+Tooltips should be placed at least 16px / 1rem off of the bottom of the page and
+not bleed off page or behind other content. On mobile, tooltips can only appear
+below the tooltip icon.
 
 <div className="image--fixed">
 
-![Placement examples for a tooltip](images/tooltip-style-5.png)
+![Placement examples for a tooltip](images/tooltip-style-7.png)
 
 </div>
 
