--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -303,8 +303,7 @@ const TutorialHeader = () => (
         <SideNav
           aria-label="Side navigation"
           expanded={isSideNavExpanded}
-          isPersistent={false}
-        >
+          isPersistent={false}>
           <SideNavItems>
             <HeaderSideNavItems>
               <HeaderMenuItem href="/repos">Repositories</HeaderMenuItem>
