update progress bars

--- a/src/pages/components/progress-bar/style.mdx
+++ b/src/pages/components/progress-bar/style.mdx
@@ -12,7 +12,7 @@ tabs: ['Usage', 'Style']
 | ------------- | ---------- | --------------------- |
 | Label         | text color | `$text-primary`       |
 | Helper text   | text color | `$text-helper`        |
-| Track         | Background | `$border-subtle`      |
+| Track         | background | `$border-subtle`      |
 | Bar: active   | background | `$border-interactive` |
 | Bar: success  | background | `$support-success`    |
 | Icon: success | fill       | `$support-success`    |
