--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -47,7 +47,8 @@ how long a process will take, or if a request is being executed.
 
 #### When to use
 
-- If a process can take a considerable or unknown amount of time
+- For a long operation or a process that can take a considerable or unknown
+  amount of time
 - When the process can be described with quantitative information, such as a
   percentage
 - To visually show the progression of a system operation such as downloading,
@@ -62,7 +63,7 @@ how long a process will take, or if a request is being executed.
   [progress indicator](/components/progress-indicator/usage) instead
 - When the progress is determined by user actions such as tutorials completed,
   or storage space, rather than system actions
-- If the process takes less than 10 seconds to load, use
+- If the process takes less than 5 seconds to load, use
   [loading spinners](/components/loading/usage) instead
 
 #### Inline loading or progress bar?
@@ -108,10 +109,10 @@ which a bar is moving along in constant speed, repeating over time.
 
 Determinate progress bars are used when the loading progress can be tracked and
 translated into a percentage indicator which fills from 0% to 100% and never
-decreases in value. The entire animation moves from the left to the right — with
+decreases in value. The entire animation moves from the left to the right – with
 no back and forth motion.
 
-Use a determinate progress bar when progress can be calculated against a
+Use a determinate progress bar when the progress can be calculated against a
 specific goal. For example, when downloading a file of a known size.
 
 <Row>
@@ -159,7 +160,7 @@ processing.
 
 #### Downloading
 
-For downloading actions it's usually possible to get a value of progress and
+For downloading actions, it's usually possible to get a value of progress and
 update it in real time for a determinate progress bar. Depending on the
 information reported from a data source, time remaining could be estimated based
 on how much has been downloaded so far over a time period.
@@ -181,7 +182,7 @@ progress bar.
 ## Formatting
 
 Determinate and indeterminate progress bars both have a label and an optional
-helper text. However, the indeterminate can’t provide the exact, quantiative
+helper text. However, the indeterminate can’t provide the exact, quantitative
 information about the progression in the optional helper text.
 
 ### Anatomy
@@ -285,12 +286,12 @@ cause confusion in the context.
 <DoDontRow>
   <DoDont caption="Do place text close to the progress bar.">
 
-![Do place text close to the progress bar](images/progress-bar-usage-14.png)
+![Do place the label close to the progress bar](images/progress-bar-usage-14.png)
 
   </DoDont>
   <DoDont type="dont" caption="Don't place text far away from the progress bar.">
 
-![Don't place text far away from the progress bar](images/progress-bar-usage-15.png)
+![Don't place the label far away from the progress bar](images/progress-bar-usage-15.png)
 
   </DoDont>
 </DoDontRow>
@@ -407,7 +408,7 @@ visible but the indicator bar's progress stops in place and spans full width.
 While the progress bar is processing information on part of a page, you can
 still interact with other elements on the page. When the progress bar is
 finished processing it can either remain persistant on the page for confirmation
-or automatically dismiss itself depending on the usecase.
+or automatically dismiss itself depending on the use case.
 
 <Row>
 <Column colLg={8}>
