fix: links on 2x grid overview page
Taking out links in the body paragraphs for Fixed and Fluid grid since they do not link anywhere and there is no respective section to link them to.

--- a/src/pages/guidelines/2x-grid/overview.mdx
+++ b/src/pages/guidelines/2x-grid/overview.mdx
@@ -108,14 +108,14 @@ fluid grid, or by tiling fixed boxes in multiples.
 
 #### Fluid grid
 
-A [fluid grid](#fluid-grid) divides space by twos. This division is immediately
+A fluid grid divides space by twos. This division is immediately
 evident in the 2x column structure. Within a breakpoint, the column count is
 constant, and unit size scales with screen size. Choose a column count by
 starting with one, then divide by two as needed.
 
 #### Fixed grid
 
-A [fixed grid](#fixed-grid) starts with a fixed unit size from the sizing scale,
+A fixed grid starts with a fixed unit size from the sizing scale,
 then tiles and wraps as needed, like text. To employ the 2x concept, multiply
 box sizes by two and mix them together.
 
