update progress bar

--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -271,14 +271,14 @@ alignment. Meanwhile, placing the text far away from the progress bar could
 cause confusion in the context.
 
 <DoDontRow>
-  <DoDont caption="Do place text inline with the progress bar.">
+  <DoDont caption="Do place text close to the progress bar.">
 
-![Do place text inline with the progress bar](images/progress-bar-usage-12.png)
+![Do place text inline with the progress bar.](images/progress-bar-usage-12.png)
 
   </DoDont>
   <DoDont type="dont" caption="Don’t embed text into the progress bar.">
 
-![Don’t embed text into the progress bar](images/progress-bar-usage-13.png)
+![Don't place the label far away from the progress bar](images/progress-bar-usage-13.png)
 
   </DoDont>
 </DoDontRow>
@@ -304,10 +304,12 @@ value is left-aligned, and the fill progresses from right to left. Keep in mind
 that the placement of the percent sign differs depending on the locale.
 
 <Row>
-<Column colLg='8'>
+<Column colLg='6'>
+<GifPlayer color='dark'>
 
-<GifPlayer>![Progress bar RTL](/images/progress-bar-usage-11.gif)</GifPlayer>
+![Determinate progress bar](/images/progress-bar-usage-11.gif)
 
+</GifPlayer>
 </Column>
 </Row>
 
@@ -349,7 +351,7 @@ dismissed depending on what is most suitable for the use case.
 <Row>
 <Column colLg={8}>
 
-![Progress bar states.](images/progress-bar-usage-16.png)
+![Progress bar states](images/progress-bar-usage-16.png)
 
 </Column>
 </Row>
@@ -406,9 +408,9 @@ visible but the indicator bar's progress stops in place and spans full width.
 #### Part of a page
 
 While the progress bar is processing information on part of a page, you can
-still interact with other elements on the page. When the progress bar is
-finished processing it can either remain persistant on the page for confirmation
-or automatically dismiss itself depending on the use case.
+still interact with other elements on the page. When the progress bar finishes
+processing it can either remain persistant on the page for confirmation or
+automatically dismiss itself depending on the use case.
 
 <Row>
 <Column colLg={8}>
