update progress bar

--- a/src/pages/components/progress-bar/style.mdx
+++ b/src/pages/components/progress-bar/style.mdx
@@ -66,9 +66,9 @@ to a maximum of six columns when possible.
 
 | Element              | Property       | px / rem | Spacing token |
 | -------------------- | -------------- | -------- | ------------- |
-| Label (top aligned)  | Padding-bottom | 8 / 0.5  | `$spacing-03` |
-| Helper text          | Padding-top    | 8 / 0.5  | `$spacing-03` |
-| Label (left aligned) | Padding-right  | 16 / 1   | `$spacing-05` |
+| Label (top aligned)  | padding-bottom | 8 / 0.5  | `$spacing-03` |
+| Helper text          | padding-top    | 8 / 0.5  | `$spacing-03` |
+| Label (left aligned) | padding-right  | 16 / 1   | `$spacing-05` |
 
 <div className="image--fixed">
 
