docs: update partners and team page

--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -74,31 +74,7 @@ increases the internal and external eminence of Carbon Design System and IBM.
 </Column>
 </Row>
 
-<h3
-  class="AutolinkHeader-module--header--1G1tm Markdown-module--h3--Gwbvh"
-  id="the-committee"
->
-  The people
-  <a
-    class="AutolinkHeader-module--anchor--36UpA AutolinkHeader-module--left-anchor--1SDoO"
-    href="#the-people"
-    aria-label="The people permalink"
-  >
-    <svg
-      focusable="false"
-      preserveAspectRatio="xMidYMid meet"
-      xmlns="http://www.w3.org/2000/svg"
-      fill="currentColor"
-      width="20"
-      height="20"
-      viewBox="0 0 32 32"
-      aria-hidden="true"
-    >
-      <path d="M29.25,6.76a6,6,0,0,0-8.5,0l1.42,1.42a4,4,0,1,1,5.67,5.67l-8,8a4,4,0,1,1-5.67-5.66l1.41-1.42-1.41-1.42-1.42,1.42a6,6,0,0,0,0,8.5A6,6,0,0,0,17,25a6,6,0,0,0,4.27-1.76l8-8A6,6,0,0,0,29.25,6.76Z"></path>
-      <path d="M4.19,24.82a4,4,0,0,1,0-5.67l8-8a4,4,0,0,1,5.67,0A3.94,3.94,0,0,1,19,14a4,4,0,0,1-1.17,2.85L15.71,19l1.42,1.42,2.12-2.12a6,6,0,0,0-8.51-8.51l-8,8a6,6,0,0,0,0,8.51A6,6,0,0,0,7,28a6.07,6.07,0,0,0,4.28-1.76L9.86,24.82A4,4,0,0,1,4.19,24.82Z"></path>
-    </svg>
-  </a>
-</h3>
+### The people
 
 <Row>
 
@@ -254,14 +230,14 @@ allocation to support Carbon's work.
 ![Haidy Francis headshot](/images/team/francis_haidy.png)
 
 </Profile>
+<Profile name="Marc Johlic" title="Product Manager, IBM Accessibility">
+
+![Marc Johlic headshot](/images/team/johlic_marc.png)
+
+</Profile>
 <Profile name="Craig Moser" title="Vice President of Design and Usability, AI Applications">
 
 ![Craig Moser headshot](/images/team/moser_craig.png)
-
-</Profile>
-<Profile name="Doug Powell" title="Vice President, Design Program Office, Cloud and Cognitive Software">
-
-![Doug Powell headshot](/images/team/powell_doug.png)
 
 </Profile>
 <Profile name="Nigel Prentice" title="Design Director, Digital Growth and Commerce">
