update IDL library content

--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -97,7 +97,8 @@ Under the same team `[NEW] IBM Design Systems` you can also turn on the
 following libraries:
 
 - Color styles - IBM Design Language
-- Icons and Pictograms - IBM Design Language
+- Icons - IBM Design Language
+- Pictograms - IBM Design Language
 - Text styles - IBM Design Language
 
 ## Start designing
