--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -66,9 +66,9 @@ To preview the four Carbon themes, visit these view-only links.
 <Row className="resource-card-group">
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      onClick={() => fathom.trackGoal('P0OEN9TS', 0)}
       subTitle="White theme"
       href="https://www.figma.com/file/Vzz8k68Pqk5HfaTdQOQrGu/White-Theme---Carbon-Design-System">
+      actionIcon="launch">
 
 ![](images/figma-icon.png)
 
@@ -77,9 +77,9 @@ To preview the four Carbon themes, visit these view-only links.
   </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      onClick={() => fathom.trackGoal('T7D1HJ3L', 0)}
       subTitle="Gray 10 theme"
       href="https://www.figma.com/file/i6y80WeotmhmbWxpmcffz7/Gray-10-Theme---Carbon-Design-System">
+      actionIcon="launch">
 
 ![](images/figma-icon.png)
 
@@ -88,9 +88,9 @@ To preview the four Carbon themes, visit these view-only links.
   </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      onClick={() => fathom.trackGoal('LYFJTPDE', 0)}
       subTitle="Gray 90 theme"
       href="https://www.figma.com/file/fCucrHE8tdGDVJX7ODqajd/Gray-90-Theme---Carbon-Design-System">
+      actionIcon="launch">
 
 ![](images/figma-icon.png)
 
@@ -99,9 +99,9 @@ To preview the four Carbon themes, visit these view-only links.
   </Column>
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
-      onClick={() => fathom.trackGoal('3XH0SIBJ', 0)}
       subTitle="Gray 100 theme"
       href="https://www.figma.com/file/TckQzGe3bNxHPLoRhbXFal/Gray-100-Theme---Carbon-Design-System">
+      actionIcon="launch">
 
 ![](images/figma-icon.png)
 
