--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -78,7 +78,7 @@ To preview the four Carbon themes, visit these view-only links.
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Gray 10 theme"
-      href="https://www.figma.com/file/i6y80WeotmhmbWxpmcffz7/Gray-10-Theme---Carbon-Design-System"
+      href="https://www.figma.com/file/i6y80WeotmhmbWxpmcffz7/Gray-10-Theme---Carbon-Design-System">
       actionIcon="launch">
 
 ![Figma icon](images/figma.svg)
@@ -89,7 +89,7 @@ To preview the four Carbon themes, visit these view-only links.
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Gray 90 theme"
-      href="https://www.figma.com/file/fCucrHE8tdGDVJX7ODqajd/Gray-90-Theme---Carbon-Design-System"
+      href="https://www.figma.com/file/fCucrHE8tdGDVJX7ODqajd/Gray-90-Theme---Carbon-Design-System">
       actionIcon="launch">
 
 ![Figma icon](images/figma.svg)
@@ -100,7 +100,7 @@ To preview the four Carbon themes, visit these view-only links.
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Gray 100 theme"
-      href="https://www.figma.com/file/TckQzGe3bNxHPLoRhbXFal/Gray-100-Theme---Carbon-Design-System"
+      href="https://www.figma.com/file/TckQzGe3bNxHPLoRhbXFal/Gray-100-Theme---Carbon-Design-System">
       actionIcon="launch">
 
 ![Figma icon](images/figma.svg)
