--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -70,7 +70,7 @@ To preview the four Carbon themes, visit these view-only links.
       href="https://www.figma.com/file/Vzz8k68Pqk5HfaTdQOQrGu/White-Theme---Carbon-Design-System">
       actionIcon="launch">
 
-![Figma icon](images/figma.svg)
+![Figma icon](/images/figma.svg)
 
     </ResourceCard>
 
@@ -81,7 +81,7 @@ To preview the four Carbon themes, visit these view-only links.
       href="https://www.figma.com/file/i6y80WeotmhmbWxpmcffz7/Gray-10-Theme---Carbon-Design-System">
       actionIcon="launch">
 
-![Figma icon](images/figma.svg)
+![Figma icon](/images/figma.svg)
 
     </ResourceCard>
 
@@ -92,7 +92,7 @@ To preview the four Carbon themes, visit these view-only links.
       href="https://www.figma.com/file/fCucrHE8tdGDVJX7ODqajd/Gray-90-Theme---Carbon-Design-System">
       actionIcon="launch">
 
-![Figma icon](images/figma.svg)
+![Figma icon](/images/figma.svg)
 
     </ResourceCard>
 
@@ -103,7 +103,7 @@ To preview the four Carbon themes, visit these view-only links.
       href="https://www.figma.com/file/TckQzGe3bNxHPLoRhbXFal/Gray-100-Theme---Carbon-Design-System">
       actionIcon="launch">
 
-![Figma icon](images/figma.svg)
+![Figma icon](/images/figma.svg)
 
     </ResourceCard>
 
