update structured list

--- a/src/pages/components/structured-list/usage.mdx
+++ b/src/pages/components/structured-list/usage.mdx
@@ -243,9 +243,9 @@ import { CheckmarkFilled16 } from '@carbon/icons-react';
 Structured list is composed of two sections—column header and data row.
 
 <Row>
-<Column colLg={8}>
+<Column colLg={12}>
 
-![data table anatomy](images/structured-list-usage-1.png)
+![Structured list anatomy](images/structured-list-usage-1.png)
 
 </Column>
 </Row>
@@ -256,9 +256,29 @@ Structured list is composed of two sections—column header and data row.
 
 ### Sizing
 
-Row height varies based on content and can expand to fit multiple lines. In a
-single list, all rows do not have to be the same height. Column widths can
-either be equally proportional or proportioned based on content.
+The structured list is available in two different sizes in height: default and
+condensed. The structure list's width varies based on content and layout.
+
+<Row>
+<Column colLg={8}>
+
+![data table anatomy](images/structured-list-usage-2.png)
+
+</Column>
+</Row>
+
+### Alignment
+
+The structured list is available in two alignment styles: hang and flush
+alignment.
+
+<Row>
+<Column colLg={8}>
+
+![data table anatomy](images/structured-list-usage-3.png)
+
+</Column>
+</Row>
 
 ## Content
 
@@ -274,14 +294,6 @@ either be equally proportional or proportioned based on content.
   and then truncate the rest of the text. The full text should be shown in a
   tooltip on hover.
 - Column header titles should use sentence-case capitalization.
-
-<Row>
-<Column colLg={8}>
-
-![Structured list to present definitions.](images/structured-list-usage-2.png)
-
-</Column>
-</Row>
 
 ## Interactions
 
