--- a/src/pages/components/structured-list/style.mdx
+++ b/src/pages/components/structured-list/style.mdx
@@ -55,7 +55,9 @@ in sentence case. All typography is left aligned.
 
 </div>
 
-<Caption>Spacing and measurements for structured list | px / rem</Caption>
+<Caption>
+  The width of structured list varies based on content and layout.
+</Caption>
 
 <div className="image--fixed">
 
@@ -64,5 +66,17 @@ in sentence case. All typography is left aligned.
 </div>
 
 <Caption>
-  Spacing and measurements for structured list with selection | px / rem
+  Spacing and measurements for default spacing with hang alignment and flush
+  alignment| px / rem
+</Caption>
+
+<div className="image--fixed">
+
+![Spacing and measurements for structured list with selection](images/structured-list-style-3.png)
+
+</div>
+
+<Caption>
+  Spacing and measurements for condensed spacing with hang alignment and flush
+  alignment | px / rem
 </Caption>
