update progress bar

--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -181,10 +181,6 @@ progress bar.
 
 ## Formatting
 
-Determinate and indeterminate progress bars both have a label and an optional
-helper text. However, the indeterminate can’t provide the exact, quantitative
-information about the progression in the optional helper text.
-
 ### Anatomy
 
 <Row>
@@ -315,13 +311,15 @@ that the placement of the percent sign differs depending on the locale.
 
 ## Content
 
-### Main elements
+Determinate and indeterminate progress bars both have a label and an optional
+helper text. However, the indeterminate can’t provide the exact, quantitative
+information about the progression in the optional helper text.
 
 #### Labels
 
 - Labels inform users what information the progress bar is processing.
 - Keep the label short and concise by limiting it to a single line of text.
-- Labels should never change as the progres bar is loading.
+- Labels should never change as the progress bar is loading.
 
 #### Helper text
 
