--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -67,7 +67,7 @@ To preview the four Carbon themes, visit these view-only links.
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="White theme"
-      href="https://www.figma.com/file/Vzz8k68Pqk5HfaTdQOQrGu/White-Theme---Carbon-Design-System">
+      href="https://www.figma.com/file/Vzz8k68Pqk5HfaTdQOQrGu/White-Theme---Carbon-Design-System"
       actionIcon="launch">
 
 ![Figma icon](/images/figma.svg)
