--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -100,7 +100,7 @@ To preview the four Carbon themes, visit these view-only links.
   <Column colMd={4} colLg={4} noGutterSm>
     <ResourceCard
       subTitle="Gray 100 theme"
-      href="https://www.figma.com/file/TckQzGe3bNxHPLoRhbXFal/Gray-100-Theme---Carbon-Design-System">
+      href="https://www.figma.com/file/TckQzGe3bNxHPLoRhbXFal/Gray-100-Theme---Carbon-Design-System"
       actionIcon="launch">
 
 ![Figma icon](/images/figma.svg)
