Update progress bar

--- a/src/pages/components/progress-bar/style.mdx
+++ b/src/pages/components/progress-bar/style.mdx
@@ -72,17 +72,27 @@ to a maximum of six columns when possible.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for a popover container.](images/progress-bar-style-4.png)
+![Structure and spacing measurements for the progress bar.](images/progress-bar-style-4.png)
 
 </div>
 
 <Caption>
-  Structure and spacing measurements a popover container. | px / rem
+  Structure and spacing measurements the progress bar | px / rem
+</Caption>
+
+<div className="image--fixed">
+
+![Structure and spacing measurements for the progress bar with an icon.](images/progress-bar-style-5.png)
+
+</div>
+
+<Caption>
+  Structure and spacing measurements the progress bar with an icon | px / rem
 </Caption>
 
 ## Sizes
 
-There are two sizes for the progress bar height, default and small.
+There are two sizes for the progress bar height, big and small.
 
 | Size    | Height px / rem |
 | ------- | --------------- |
@@ -91,11 +101,6 @@ There are two sizes for the progress bar height, default and small.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements between a popover container and trigger button.](images/progress-bar-style-5.png)
+![Progress bar sizes](images/progress-bar-style-6.png)
 
 </div>
-
-<Caption>
-  Structure and spacing measurements between a popover container and trigger
-  button. | px / rem
-</Caption>
