update: style tab structure content

--- a/src/pages/components/form/style.mdx
+++ b/src/pages/components/form/style.mdx
@@ -46,26 +46,25 @@ for specific typography details on each component.
 ## Structure
 
 Forms are made up of several different components. The order in which these
-elements are arranged is flexible, but should always follow the spacing
-guidelines below.
+elements are arranged is flexible and by default the vertical spacing between
+elements should follow the guidelines below. The vertical spacing in a form can
+be adjusted to be smaller than the default depending on the use case or layout.
 
 Forms can be one column or two. The width of each column varies based on the
 content and layout of the design. On mobile, forms can only have one column.
-
-All icons can be found on the [icons](/guidelines/icons/library) library page.
 
 ### Recommended
 
 | Element              | Property      | px / rem | Spacing token |
 | -------------------- | ------------- | -------- | ------------- |
-| Form items           | margin-bottom | 24 / 1.5 | `$spacing-06` |
+| Form items           | margin-bottom | 32 / 2   | `$spacing-07` |
 | Title area           | margin-bottom | 32 / 2   | `$spacing-07` |
 | Gutter between items | –             | 32 / 2   | `$spacing-07` |
 | Buttons              | margin-top    | 32 / 2   | `$spacing-07` |
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for a double column form ](images/form-style-2.png)
+![Structure and spacing measurements for a double column form ](images/form-style-1.png)
 
 </div>
 
@@ -75,7 +74,7 @@ All icons can be found on the [icons](/guidelines/icons/library) library page.
 
 <div className="image--fixed">
 
-![Structure and spacing measurements for a single column form](images/form-style-1.png)
+![Structure and spacing measurements for a single column form](images/form-style-2.png)
 
 </div>
 
