--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -64,50 +64,46 @@ for example the `White theme - Carbon Design System` to on (D).
 To preview the four Carbon themes, visit these view-only links.
 
 <Row className="resource-card-group">
-  <Column colMd={4} colLg={4} noGutterSm>
-    <ResourceCard
-      subTitle="White theme"
-      href="https://www.figma.com/file/Vzz8k68Pqk5HfaTdQOQrGu/White-Theme---Carbon-Design-System">
-      actionIcon="launch">
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="White theme"
+    href="https://www.figma.com/file/Vzz8k68Pqk5HfaTdQOQrGu/White-Theme---Carbon-Design-System"
+    actionIcon="launch">
 
 ![Figma icon](/images/figma.svg)
 
-    </ResourceCard>
-
-  </Column>
-  <Column colMd={4} colLg={4} noGutterSm>
-    <ResourceCard
-      subTitle="Gray 10 theme"
-      href="https://www.figma.com/file/i6y80WeotmhmbWxpmcffz7/Gray-10-Theme---Carbon-Design-System">
-      actionIcon="launch">
-
-![Figma icon](/images/figma.svg)
-
-    </ResourceCard>
-
-  </Column>
-  <Column colMd={4} colLg={4} noGutterSm>
-    <ResourceCard
-      subTitle="Gray 90 theme"
-      href="https://www.figma.com/file/fCucrHE8tdGDVJX7ODqajd/Gray-90-Theme---Carbon-Design-System">
-      actionIcon="launch">
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Gray 10 theme"
+    href="https://www.figma.com/file/i6y80WeotmhmbWxpmcffz7/Gray-10-Theme---Carbon-Design-System"
+    actionIcon="launch">
 
 ![Figma icon](/images/figma.svg)
 
-    </ResourceCard>
-
-  </Column>
-  <Column colMd={4} colLg={4} noGutterSm>
-    <ResourceCard
-      subTitle="Gray 100 theme"
-      href="https://www.figma.com/file/TckQzGe3bNxHPLoRhbXFal/Gray-100-Theme---Carbon-Design-System">
-      actionIcon="launch">
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Gray 90 theme"
+    href="https://www.figma.com/file/fCucrHE8tdGDVJX7ODqajd/Gray-90-Theme---Carbon-Design-System"
+    actionIcon="launch">
 
 ![Figma icon](/images/figma.svg)
 
-    </ResourceCard>
+  </ResourceCard>
+</Column>
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Gray 100 theme"
+    href="https://www.figma.com/file/TckQzGe3bNxHPLoRhbXFal/Gray-100-Theme---Carbon-Design-System"
+    actionIcon="launch">
 
-  </Column>
+![Figma icon](/images/figma.svg)
+
+  </ResourceCard>
+</Column>
 </Row>
 
 <br />
