--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -354,7 +354,7 @@ import {
 ### Sizing
 
 The data table is available in four different
-[row sizes](/data-table/style#rows): tall, normal, short, compact.
+[row sizes](/components/data-table/style/#rows): tall, normal, short, compact.
 
 <Row>
 <Column colLg={8}>
