--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -109,7 +109,7 @@ which a bar is moving along in constant speed, repeating over time.
 
 Determinate progress bars are used when the loading progress can be tracked and
 translated into a percentage indicator which fills from 0% to 100% and never
-decreases in value. The entire animation moves from the left to the right – with
+decreases in value. The entire animation moves from the left to the right — with
 no back and forth motion.
 
 Use a determinate progress bar when the progress can be calculated against a
@@ -120,6 +120,8 @@ specific goal. For example, when downloading a file of a known size.
 <GifPlayer color='dark'>
 
 ![Determinate progress bar](/images/progress-bar-usage-4.gif)
+
+![Determinate progress bar](/images/progress-bar-usage-4.png)
 
 </GifPlayer>
 </Column>
@@ -142,6 +144,8 @@ task to the user. In this scenario, a percentage indicator would not be present.
 <GifPlayer>
 
 ![Indeterminate progress bar](/images/progress-bar-usage-5.gif)
+
+![Indeterminate progress bar](/images/progress-bar-usage-5.png)
 
 </GifPlayer>
 </Column>
@@ -235,9 +239,9 @@ a window or application.
 ![Do keep a width within six columns.](images/progress-bar-usage-8.png)
 
   </DoDont>
-  <DoDont type="dont" caption="Don't exceed a width of six columns.">
+  <DoDont type="dont" caption="Do not exceed a width of six columns.">
 
-![Don't exceed a width of six columns.](images/progress-bar-usage-9.png)
+![Do not exceed a width of six columns.](images/progress-bar-usage-9.png)
 
   </DoDont>
 </DoDontRow>
@@ -272,9 +276,9 @@ cause confusion in the context.
 ![Do place text inline with the progress bar.](images/progress-bar-usage-12.png)
 
   </DoDont>
-  <DoDont type="dont" caption="Don’t embed text into the progress bar.">
+  <DoDont type="dont" caption="Do not embed text into the progress bar.">
 
-![Don't place the label far away from the progress bar](images/progress-bar-usage-13.png)
+![Do not place the label far away from the progress bar](images/progress-bar-usage-13.png)
 
   </DoDont>
 </DoDontRow>
@@ -285,9 +289,9 @@ cause confusion in the context.
 ![Do place the label close to the progress bar](images/progress-bar-usage-14.png)
 
   </DoDont>
-  <DoDont type="dont" caption="Don't place text far away from the progress bar.">
+  <DoDont type="dont" caption="Do not place text far away from the progress bar.">
 
-![Don't place the label far away from the progress bar](images/progress-bar-usage-15.png)
+![Do not place the label far away from the progress bar](images/progress-bar-usage-15.png)
 
   </DoDont>
 </DoDontRow>
@@ -304,6 +308,8 @@ that the placement of the percent sign differs depending on the locale.
 <GifPlayer color='dark'>
 
 ![Determinate progress bar](/images/progress-bar-usage-11.gif)
+
+![Determinate progress bar](/images/progress-bar-usage-11.png)
 
 </GifPlayer>
 </Column>
@@ -375,6 +381,8 @@ visible but the indicator bar's progress stops in place and spans full width.
 
 ![The example shows the progress bar with error remains persistent as confirmation inside the image tile](images/progress-bar-usage-17.gif)
 
+![The example shows the progress bar with error remains persistent as confirmation inside the image tile](images/progress-bar-usage-17.png)
+
 </GifPlayer>
 
 <Caption>
@@ -390,6 +398,8 @@ visible but the indicator bar's progress stops in place and spans full width.
 <GifPlayer color='dark'>
 
 ![The example shows thep progress bar is automatically dismissed once it’s done uploading](images/progress-bar-usage-18.gif)
+
+![The example shows thep progress bar is automatically dismissed once it’s done uploading](images/progress-bar-usage-18.png)
 
 </GifPlayer>
 
@@ -448,6 +458,8 @@ to right) when enough information is gathered to end the load animation.
 <GifPlayer color='dark'>
 
 ![An indeterminate bar can change to a determinate indicator](/images/progress-bar-usage-21.gif)
+
+![An indeterminate bar can change to a determinate indicator](/images/progress-bar-usage-21.png)
 
 </GifPlayer>
 </Column>
