--- a/src/pages/developing/react-tutorial/step-2.mdx
+++ b/src/pages/developing/react-tutorial/step-2.mdx
@@ -260,7 +260,7 @@ import {
 
 Before we can render the tabs, we need to add some props for the component after
 the import. These example props came from the
-[React Tabs Story](http://react.carbondesignsystem.com/?selectedKind=Tabs) in
+[React Tabs Story](https://react.carbondesignsystem.com/?path=/story/components-tabs--default) in
 Storybook.
 
 ```javascript path=src/content/LandingPage/LandingPage.js
@@ -325,8 +325,8 @@ the expected `grid` > `row` > `col` DOM structure.
 
 </InlineNotification>
 
-Hold up! If you were to run
-[DAP](https://www.ibm.com/able/dynamic-assessment-plug-in.html) to check for
+Hold up! If you were to run the
+[Equal Access Toolkit](https://www.ibm.com/able/toolkit) to check for
 accessibility violations, you'd see
 `Multiple navigation landmarks must have unique labels specified with aria-label or aria-labelledby`
 because both the `Breadcrumb` and `Tabs` components use `<nav>` elements. To
@@ -752,7 +752,7 @@ export default RepoTable;
 
 This component uses two props, `rows` and `headers`, and returns a Carbon
 `DataTable`. As for where the various `Table*` components came from? The
-[DataTable story](http://react.carbondesignsystem.com/?selectedKind=DataTable&selectedStory=with%20expansion)
+[DataTable story](https://react.carbondesignsystem.com/?path=/story/components-datatable-expansion--usage)
 in Storybook was used to put together the data table structure.
 
 <InlineNotification>
