--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -266,6 +266,9 @@ create emphasis on important key words to copy and makes long bodies of text
 easier to scan. Refrain from having inline code snippets that extend to multiple
 lines.
 
+For additional keyboard interactions, see the
+[accessibility tab](/components/code-snippet/accessibility#keyboard-interaction).
+
 <Row>
 <Column colLg={8}>
 
