add notification to figma page

--- a/src/pages/designing/kits/figma.mdx
+++ b/src/pages/designing/kits/figma.mdx
@@ -13,6 +13,15 @@ contains all resources you need to get started.
 
 </PageDescription>
 
+<InlineNotification>
+
+**Available to IBM only:** the Figma kit is currently only available to IBMers
+through a private Figma organization. We are working on getting the kit added to
+the Figma open community and expect it to be published at the end of Q1 for
+external use.
+
+</InlineNotification>
+
 <AnchorLinks>
 
 <AnchorLink>Get the libraries</AnchorLink>
