--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -287,15 +287,14 @@ This kit provides designers with a way to visualize concepts and test them out
 before committing to high-fidelity designs.
 
 <Row className="resource-card-group">
-
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon Mid-Fi Sketch kit"
-    href="sketch://add-library/cloud/e888aa99-4d88-46a4-9b33-3a033e7f5ca2"
-    actionIcon="download">
-    <MdxIcon name="sketch" />
-  </ResourceCard>
-</Column>
+  <Column colMd={4} colLg={4} noGutterSm>
+    <ResourceCard
+      subTitle="Carbon Mid-Fi Sketch kit"
+      href="sketch://add-library/cloud/e888aa99-4d88-46a4-9b33-3a033e7f5ca2"
+      actionIcon="download">
+      <MdxIcon name="sketch" />
+    </ResourceCard>
+  </Column>
 </Row>
 
 ### Invision Freehand kit
@@ -304,7 +303,6 @@ A Carbon wireframe kit for Invision Freehand is available for teams to create
 low fidelity wireframes. This kit is maintained by the Cloud PAL community.
 
 <Row className="resource-card-group">
-
 <Column colMd={4} colLg={4} noGutterSm>
   <ResourceCard
     subTitle="Invision Freehand kit"
@@ -315,3 +313,4 @@ low fidelity wireframes. This kit is maintained by the Cloud PAL community.
 
   </ResourceCard>
 </Column>
+</Row>
